[metadata]
name = otc-doc-convertor
author = Open Telekom Cloud - Ecosystem Squad
author_email = dl-pbcotcdeleco@t-systems.com
description = Python program to convert docs exported in HTML into RST
description_file =
    README.md
home_page = https://github.com/opentelekomcloud-docs/doc-exports
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = Sphinx, search, python

[options]
packages = otc_doc_convertor

[options.entry_points]
console_scripts =
  otc-convert-doc = otc_doc_convertor.convertor:main
